# object-store-server

./: .env  .env.example  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  iceberg_architecture.md  integration_report.md
examples/: simple.rs
src/: app.rs  lib.rs
src/adapters/inbound/http/: dto.rs  mod.rs  router.rs
src/adapters/inbound/http/handlers/: lifecycle_handlers.rs  mod.rs  object_handlers.rs  versioning_handlers.rs
src/adapters/inbound/http/middleware/: middleware.rs  mod.rs
src/adapters/outbound/persistence/: in_memory_lifecycle_repository.rs  in_memory_object_repository.rs  mod.rs  sql_lifecycle_repository.rs  sql_object_repository.rs
src/adapters/outbound/storage/: apache_object_store_adapter.rs  bucket.rs  error.rs  lifecycle.rs  lifecycle_adapter.rs  mod.rs  versioning.rs
src/domain/: mod.rs
src/domain/errors/: lifecycle_errors.rs  mod.rs  storage_errors.rs  validation_errors.rs
src/domain/models/: filter.rs  lifecycle.rs  mod.rs  object.rs  version.rs
src/domain/value_objects/: bucket_name.rs  mod.rs  object_key.rs  version_id.rs
src/ports/: mod.rs
src/ports/repositories/: lifecycle_repository.rs  mod.rs  object_repository.rs
src/ports/services/: lifecycle_service.rs  mod.rs  object_service.rs  versioning_service.rs
src/ports/storage/: mod.rs  object_store.rs
src/services/: lifecycle_service_impl.rs  mod.rs  object_service_impl.rs  versioning_service_impl.rs
tests/: basic_tests.rs  integration_tests.rs  lifecycle_tests.rs  minio_lifecycle_test.rs  minio_tests.rs  versioned_store_tests.rs
(+5 files in other folders)
