[package]
name = "object-store-server"
version = "0.1.0"
edition = "2024"

[dependencies]
object_store = { version = "0.12", features = ["aws"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
bytes = "1.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
async-trait = "0.1"
http = "1.0"
hyper = "1.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
quick-xml = { version ="0.31.0", features = ["serde", "serialize"]}
reqwest = { version = "0.11", features = ["json"] }
bon = "3.6.3"
md5 = "0.7"

[dev-dependencies]
async-stream = "0.3.5"
urlencoding = "2.1.0"
axum-test = "18.0.0-rc3"

